@@ -31,32 +31,46 @@ public class AppConfig {
         http
                 .csrf(csrf -> csrf.disable()) // Disable CSRF protection for stateless authentication
                 .cors(cors -> cors.configurationSource(corsConfigarationSource())) // Enable CORS
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Use stateless sessions
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Use
+                                                                                                              // stateless
+                                                                                                              // sessions
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/auth/**").permitAll() // Allow public access to login and register
                         .requestMatchers("/api/**").authenticated() // Protect all other API endpoints
                         .anyRequest().permitAll() // Allow other non-API requests
                 )
-                .addFilterBefore(new JwtTokenValidator(), BasicAuthenticationFilter.class) // Add custom JWT validation filter
-                .httpBasic(withDefaults()); // Optional: Enable basic authentication for testing (can remove in production)
+                .addFilterBefore(new JwtTokenValidator(), BasicAuthenticationFilter.class) // Add custom JWT validation
+                                                                                           // filter
+                .httpBasic(withDefaults()); // Optional: Enable basic authentication for testing (can remove in
+                                            // production)
 
         return http.build();
     }
 
+    @Value("${frontend.url}")
+    private String frontendUrls; // Changed to hold comma-separated URLs
+
+    // ...
+
     private CorsConfigurationSource corsConfigarationSource() {
         return request -> {
             CorsConfiguration cfg = new CorsConfiguration();
-            cfg.setAllowedOrigins(Collections.singletonList(frontendUrl));
+
+            List<String> allowedOrigins = List.of(frontendUrls.split(","));
+            cfg.setAllowedOrigins(allowedOrigins);
+
             cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
             cfg.setAllowedHeaders(List.of("Authorization", "Content-Type"));
             cfg.setExposedHeaders(List.of("Authorization"));
             cfg.setMaxAge(3600L);
+            cfg.setAllowCredentials(true); // If you are sending cookies or Authorization headers
+
             return cfg;
         };
     }
 
     @Bean
-    public PasswordEncoder passwordEncoder(){
+    public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 }
